# Pocket-Office

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  codecov.yml  deny.toml  justfile
crates/ascii-agents/: Cargo.toml
crates/ascii-agents/examples/: snapshot.rs
crates/ascii-agents/src/: cli.rs  config.rs  main.rs  runtime.rs
crates/ascii-agents/src/install/: io.rs  merge.rs  mod.rs
crates/ascii-agents/src/tui/: embedded_pack.rs  floor.rs  hit_test.rs  layout.rs  mod.rs  pathfind.rs  pixel_painter.rs  pose.rs  renderer.rs  tui_renderer.rs  widgets.rs
crates/ascii-agents/tests/: frame_cache.rs  golden_image.rs  install.rs  pixel_regression.rs  snapshot_regression.rs  tui_renderer.rs  widget_cells.rs
crates/ascii-agents/tests/snapshots/: golden_image__golden_cyberpunk_theme.snap  golden_image__golden_empty_office.snap  golden_image__golden_populated_office.snap
crates/pixtuoid/: CLAUDE.md  Cargo.toml  build.rs
crates/pixtuoid-core/: CLAUDE.md  Cargo.toml
crates/pixtuoid-core/examples/: decoder_fuzz.rs
crates/pixtuoid-core/src/: grid.rs  id.rs  lib.rs  physics.rs  platform.rs  pose.rs  walkable.rs
crates/pixtuoid-core/src/layout/: approach.rs  compute.rs  decor.rs  mask.rs  mod.rs  reach.rs  tests.rs
crates/pixtuoid-core/src/pose/: mod.rs  tests.rs
crates/pixtuoid-core/src/render/: mod.rs  test_renderer.rs
crates/pixtuoid-core/src/source/: antigravity.rs  cc_probe.rs  claude_code.rs  codewhale.rs  codex.rs  copilot.rs  cursor.rs  daemon.rs  decoder.rs  exit_watch.rs  fd_probe.rs  hermes.rs  jsonl.rs  mod.rs  openclaw.rs  opencode.rs  proc_start.rs  reasonix.rs  registry.rs
crates/pixtuoid-core/src/sprite/: blit.rs  format.rs  mod.rs
crates/pixtuoid-core/src/state/: correlation.rs  fsm.rs  mod.rs  reducer.rs  scope.rs
crates/pixtuoid-core/tests/: CLAUDE.md  decoder.rs  e2e.rs  proof_fixture_disjointness.rs  reducer.rs  socket_path_parity.rs  sprite_blit.rs  sprite_format.rs  supported_sources_manifest.rs  watcher.rs
crates/pixtuoid-core/tests/reducer/: activity.rs  child_ledger.rs  display.rs  lifecycle.rs  liveness.rs  main.rs  snapshot.rs  tasks.rs
crates/pixtuoid-core/tests/render/: blit.rs  format.rs
crates/pixtuoid-core/tests/sources/: claude.rs  conformance.rs
crates/pixtuoid-core/tests/transport/: pipe.rs  socket.rs
crates/pixtuoid-core/tests/watcher/: attach.rs  liveness.rs  main.rs  sources.rs
crates/pixtuoid-hook/: Cargo.toml
crates/pixtuoid-hook/src/: main.rs  paths.rs  transport.rs
crates/pixtuoid-hook/tests/: pipe_quota_parity.rs  shim.rs
crates/pixtuoid-scene/: CLAUDE.md  Cargo.toml  build.rs
crates/pixtuoid-scene/sprites/default/: back_couch.sprite  bookshelf.sprite  bulletin_board.sprite  cat_sit.sprite  cat_sleep.sprite  cat_walk_0.sprite  cat_walk_1.sprite  desk.sprite  desk_back.sprite  desk_front.sprite  executive_art_wall.sprite  executive_bar.sprite  executive_board_table.sprite  executive_chandelier.sprite  executive_marble_floor.sprite  executive_money_painting.sprite  executive_runner.sprite  executive_sculpture.sprite  filing_cabinet.sprite  floor_lamp.sprite  goldman_desk.sprite  goldman_desk_back.sprite  goldman_desk_front.sprite  holding_coffee.sprite  meeting_screen.sprite  meeting_sofa.sprite  pack.toml  pantry.sprite  pantry_small.sprite  phone_booth.sprite  plant.sprite  plant_flower.sprite  plant_succulent.sprite  plant_tall.sprite  seated.sprite  seated_sleeping.sprite  seated_sleeping_alt.sprite  snack_shelf.sprite  standing.sprite  standing_desk.sprite  (+18 more)
crates/pixtuoid-scene/src/: anim.rs  board.rs  burn.rs  chitchat.rs  chitchat_goldman_original.txt  embedded_pack.rs  floor.rs  frame_cache.rs  habits.rs  layout.rs  lib.rs  overlay.rs  pathfind.rs  pet.rs  physics.rs
crates/pixtuoid-scene/src/layout/: approach.rs  coarse.rs  compute.rs  decor.rs  mask.rs  mod.rs  overrides.rs  placement.rs  placement_sweep.rs  reach.rs  tests.rs
crates/pixtuoid-scene/src/motion/: mod.rs  tests.rs
crates/pixtuoid-scene/src/pixel_painter/: ambient.rs  anchors.rs  character_components.rs  character_profile.rs  debug_overlay.rs  drawable.rs  effects.rs  face_overlay.rs  furniture.rs  glass.rs  mod.rs  palette.rs  seat.rs  sim.rs  tests.rs  trading_event.rs
crates/pixtuoid-scene/src/pose/: mod.rs  pure.rs  tests.rs
crates/pixtuoid-scene/src/theme/: catppuccin.rs  cyberpunk.rs  dracula.rs  goldman.rs  gruvbox.rs  mod.rs  new_york.rs  normal.rs  succession.rs  tokyo_night.rs
crates/pixtuoid-scene/tests/: site_badge_colors.rs
crates/pixtuoid-web/: Cargo.toml
crates/pixtuoid-web/examples/: hero_still.rs
crates/pixtuoid-web/src/: lib.rs  script.rs
crates/pixtuoid/examples/: floating_snapshot.rs  snapshot.rs
crates/pixtuoid/examples/snapshot/: encode.rs  main.rs  proof.rs  scenes.rs
crates/pixtuoid/sprites/default/: holding_coffee.sprite  lobster_rest.sprite  lobster_walk_0.sprite  lobster_walk_1.sprite  molty_rest.sprite  molty_walk_0.sprite  molty_walk_1.sprite  pack.toml  walking_coffee_0.sprite
crates/pixtuoid/sprites/robot/: holding_coffee.sprite  seated.sprite  seated_sleeping_alt.sprite  standing.sprite  typing_0.sprite  typing_1.sprite  walking_0.sprite  walking_1.sprite  walking_back_0.sprite
crates/pixtuoid/sprites/skeleton/: placeholder.sprite
crates/pixtuoid/src/: aa_text.rs  cli.rs  config.rs  crash.rs  doctor.rs  lib.rs  main.rs  runtime.rs  setup.rs  sources.rs  term.rs  version.rs
crates/pixtuoid/src/floating/: mod.rs  offscreen.rs  window.rs
crates/pixtuoid/src/focus/: linux.rs  macos.rs  mod.rs  windows.rs
crates/pixtuoid/src/install/: claude.rs  codewhale.rs  codex.rs  cursor.rs  hermes.rs  io.rs  merge.rs  mod.rs  openclaw.rs  openclaw_plugin.js  opencode.rs  reasonix.rs  target.rs  verify.rs
crates/pixtuoid/src/runtime/: driver.rs  mod.rs  visual_coworkers.rs
crates/pixtuoid/src/scene/: CLAUDE.md  chitchat.rs  embedded_pack.rs  (+6 more)
crates/pixtuoid/tests/: frame_cache.rs  golden_image.rs  layout_golden.rs  pixel_regression.rs  snapshot_regression.rs  test_helpers.rs  tui_renderer.rs  walkable_golden.rs  widget_cells.rs  wire_to_pixels.rs
(+400 files in other folders)
