[workspace]
resolver = "2"
members  = [
    "crates/pixtuoid-core",
    "crates/pixtuoid",
    "crates/pixtuoid-hook",
]

[workspace.package]
version      = "0.9.0"
edition      = "2021"
rust-version = "1.89"
license      = "MIT"
repository   = "https://github.com/IvanWng97/pixtuoid"
authors      = ["Ivan Wang <ivanwng97@icloud.com>"]
description  = "Terminal pixel-art office for AI coding agents"
homepage     = "https://github.com/IvanWng97/pixtuoid"
keywords     = ["terminal", "tui", "pixel-art", "ai-agents", "claude"]
categories   = ["command-line-utilities", "visualization"]

[profile.release]
lto           = true
codegen-units = 1
strip         = "debuginfo"
panic         = "abort"

[profile.dev]
# Keep file:line in backtraces (line-tables-only) but drop the heavier
# variable/type debuginfo — faster local incremental builds + smaller cached
# target dirs. Independent of release above (which strips debuginfo entirely).
debug = "line-tables-only"

[profile.dev.package."*"]
# Dependencies never need debuginfo for our own backtraces.
debug = false

# Opt-in full debuginfo for an actual debugger session (the third stanza of the
# official Cargo build-performance recipe): `cargo build --profile debugging`.
[profile.debugging]
inherits = "dev"
debug = true

[workspace.dependencies]
tokio              = { version = "1", default-features = false }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "1"
# Format-preserving TOML editing for config.toml saves (comments + unknown keys
# survive). The toml crate's own sibling (same toml-rs maintainers).
toml_edit          = "0.25"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify             = "8"
ratatui            = "0.30"
crossterm          = "0.29"
clap               = { version = "4", features = ["derive"] }
