[package]
name                   = "ascii-agents"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "ascii-agents"
path = "src/main.rs"

[dependencies]
ascii-agents-core  = { path = "../ascii-agents-core", features = ["test-renderer"] }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "fs", "io-util"] }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
fs2                = { workspace = true }
which              = "6"
# clock feature gives us Local::now() w/ system timezone for the wall clock.
chrono             = { version = "0.4", default-features = false, features = ["clock"] }
# palette gives Lab-space color blending — perceptually-correct twilight
# transitions and dim overlays vs naive sRGB linear blend.
palette            = { version = "0.7", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
image    = { version = "0.25", default-features = false, features = ["png"] }

[[example]]
name = "snapshot"
path = "examples/snapshot.rs"
