[package]
name                   = "pixtuoid-core"
description            = "Headless engine for pixtuoid — state, sprites, layout"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
# Workspace-only tests that read a sibling file absent from the published
# tarball — shipping them would make `cargo test` fail on the .crate (publish
# itself is unaffected: its verify step builds, not tests). socket_path_parity
# #[path]-includes ../../pixtuoid-hook/src/paths.rs; supported_sources_manifest
# reads ../../site/src/sources.json at runtime (runtime-read spares the publish
# build-verify, NOT cargo test on an extracted crate — so it must be excluded too).
exclude                = ["tests/socket_path_parity.rs", "tests/supported_sources_manifest.rs"]

[lints]
workspace = true

[features]
default       = []
test-renderer = []

[dependencies]
tokio       = { workspace = true, features = ["sync", "rt", "macros", "fs", "net", "time", "io-util"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
notify      = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# 0.61 to match the major tokio already pulls (via mio) for this target —
# a second windows-sys major would double-compile the bindings.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "fs", "net", "time", "io-util", "rt-multi-thread"] }
tempfile = "3"
filetime = "0.2"
insta = { version = "1", features = ["yaml"] }
tracing-subscriber = { workspace = true }

