[package]
name                   = "pixtuoid-hook"
description            = "Lightweight hook shim for pixtuoid"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
# Workspace-only test that reads a sibling crate's source file, absent from the
# published tarball — shipping it would make `cargo test` fail on the .crate
# (publish itself is unaffected: its verify step builds, not tests).
# pipe_quota_parity include_str!'s pixtuoid-core's source/hook/windows.rs, the
# same treatment core gives socket_path_parity.
exclude                = ["tests/pipe_quota_parity.rs"]

[lints]
workspace = true

[[bin]]
name = "pixtuoid-hook"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
anyhow     = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "net", "time", "io-util", "rt-multi-thread"] }

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/pixtuoid-hook", "usr/bin/", "755"],
]
