[package]
name                   = "pixtuoid-scene"
description            = "Backend-agnostic render + simulation engine for pixtuoid"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
pixtuoid-core = { path = "../pixtuoid-core", version = "0.11.0" }
anyhow        = { workspace = true }
tracing       = { workspace = true }
# clock feature gives us Local::now() w/ system timezone for the wall clock.
chrono        = { version = "0.4", default-features = false, features = ["clock"] }
# palette gives Lab-space color blending — perceptually-correct twilight
# transitions and dim overlays vs naive sRGB linear blend.
palette       = { version = "0.7", default-features = false, features = ["std"] }
font8x8       = "0.3.1"

[dev-dependencies]
serde_json = { workspace = true }
tempfile   = "3"
