[package]
name                   = "pixtuoid-scene"
description            = "Backend-agnostic render + simulation engine for pixtuoid"
# site_badge_colors.rs reads ../../site/src/sources.json at runtime — fine for
# publish verify (compiles), but `cargo test` on the extracted .crate would
# panic (no workspace tree). Same treatment as pixtuoid-core's manifest test.
exclude                = ["tests/site_badge_colors.rs"]
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

# `native` (default) forwards to pixtuoid-core's async runtime + watcher layer.
# `cargo build -p pixtuoid-scene --no-default-features` drops it, giving a
# wasm32-buildable render engine (no tokio/notify) — the WebAssembly office hero.
[features]
default = ["native"]
native  = ["pixtuoid-core/native"]

[dependencies]
pixtuoid-core = { path = "../pixtuoid-core", version = "0.11.1", default-features = false }
anyhow        = { workspace = true }
tracing       = { workspace = true }
# clock feature gives us Local::now() w/ system timezone for the wall clock.
chrono        = { version = "0.4", default-features = false, features = ["clock"] }
# palette gives Lab-space color blending — perceptually-correct twilight
# transitions and dim overlays vs naive sRGB linear blend.
palette       = { version = "0.7", default-features = false, features = ["std"] }
font8x8       = "0.3.1"

[dev-dependencies]
serde_json = { workspace = true }
tempfile   = "3"
