[package]
name        = "pixtuoid-web"
description  = "WebAssembly canvas painter over the pixtuoid-scene engine — the live office hero"
# A SITE BUILD INPUT, never a crates.io artifact: it must not enter the
# workspace's semver/release surface (the render engine's public API does; this
# thin wasm shim does not).
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true

[lints]
workspace = true

# cdylib = the wasm-bindgen artifact; rlib = so the pure sim logic (scene
# seeding, the scripted timeline, RGB→RGBA) is unit-testable natively.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# default-features = false → pixtuoid-core builds WITHOUT the native async
# runtime (no tokio/notify) → the whole graph compiles to wasm32.
pixtuoid-core  = { path = "../pixtuoid-core", version = "0.14.0", default-features = false }
pixtuoid-scene = { path = "../pixtuoid-scene", version = "0.14.0", default-features = false }
# Pin to the installed wasm-bindgen-cli (the generated JS glue must match).
wasm-bindgen   = "=0.2.126"
# Feature-unions `wasmbind` into scene's chrono: on wasm32, `chrono::Local`
# resolves the REAL browser timezone via js-sys (else it silently falls back
# to UTC and the office's day/night cycle is wrong for most visitors). The
# wasmbind deps are target-gated to wasm32 — zero cost on native builds.
chrono         = { version = "0.4", default-features = false, features = ["wasmbind"] }

# chrono is unused BY THE LIB on purpose — no direct `use chrono` in src/;
# it exists there solely for the feature-union above (machete can't see
# feature-unioning). The `hero_still` example DOES use it directly
# (deterministic --hour → t0_ms); the ignore stays regardless since the
# feature-union reason alone already justifies pinning the dep here.
[package.metadata.cargo-machete]
ignored = ["chrono"]

[dev-dependencies]
# hero_still example only (PNG encode for the committed wide poster, #425);
# dev-deps never reach the wasm artifact.
image = { version = "0.25", default-features = false, features = ["png"] }
# Parse+assert `overlay_json`'s hand-built payload in the native tests (never in
# the wasm artifact — dev-deps aren't bundled).
serde_json = { workspace = true }
