[package]
name                   = "pixtuoid"
description            = "Terminal pixel-art office for AI coding agents"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[[bin]]
name = "pixtuoid"
path = "src/main.rs"

[dependencies]
pixtuoid-core  = { path = "../pixtuoid-core", version = "0.11.1" }
pixtuoid-scene = { path = "../pixtuoid-scene", version = "0.11.1" }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "fs", "io-util"] }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
toml_edit          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
which              = "8"
# clock feature gives us Local::now() w/ system timezone for the wall clock.
chrono             = { version = "0.4", default-features = false, features = ["clock"] }
open               = "5"
# The `pixtuoid floating` desktop window (binary-only — pixtuoid-core stays window-free,
# invariant #1). winit = the frameless always-on-top window + main-thread event loop;
# softbuffer = CPU blit of the office RgbBuffer into it (no GPU). Both rust-windowing,
# share raw-window-handle 0.6, MSRV ≤ 1.89.
winit              = "0.30"
softbuffer         = "0.4"
clap_complete = "4.6.5"
clap_mangen = "0.3.0"

# termios/poll for the truecolor preflight's DECRQSS terminal query (term.rs):
# raw-mode the controlling tty + timed read of the reply. Unix-only — Windows
# hard-gates VT separately. Same 0.2 as pixtuoid-core/hook — no second build.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# GetShortPathNameW for the Codex/Reasonix Windows hook path: resolve a
# space/metacharacter-bearing install path to its DOS 8.3 short form so cmd.exe /C
# can invoke it (#195). Same 0.61 major as pixtuoid-core — no second build.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
# End-to-end CLI golden for `sources --json` (the Raycast contract): runs the real
# binary in an isolated empty HOME and pins its stdout JSON order-insensitively.
# Goldens update with SNAPSHOTS=overwrite. See tests/cli_json.rs.
snapbox  = { version = "1", features = ["json"] }
# Emits the SourceStatus JSON Schema (the Raycast --json contract) — test/gen
# only, so the `JsonSchema` derive is `cfg_attr(test)` and this stays a dev-dep
# (no production-binary impact). See sources.rs + `just gen-contract`.
schemars = "1"
# test-util: paused-clock signal-arm tests in runtime/driver.rs (headless_loop).
tokio    = { workspace = true, features = ["test-util"] }
image    = { version = "0.25", default-features = false, features = ["png", "gif"] }
insta    = "1"

[[example]]
name = "snapshot"
path = "examples/snapshot.rs"
test = true

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/pixtuoid", "usr/bin/", "755"],
]
extended-description = "Terminal-native, multi-agent pixel-art visualizer for AI coding agents. Each running Claude Code session appears as an animated sprite in a top-down ASCII office."
