[package]
name                   = "pixtuoid"
description            = "Terminal pixel-art office for AI coding agents"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[[bin]]
name = "pixtuoid"
path = "src/main.rs"

[dependencies]
pixtuoid-core  = { path = "../pixtuoid-core", version = "0.15.0" }
pixtuoid-scene = { path = "../pixtuoid-scene", version = "0.15.0" }
# AA text rasterizer (Monaspace Neon) for the binary's pixel surfaces: the
# floating window's name badges + wall board (src/aa_text.rs) AND the --proof
# example panel. On Linux it's already resolved transitively via sctk-adwaita
# (winit's Wayland CSD titlebar text — see Cargo.lock), so the direct entry adds
# no new crate/license there; on mac/Windows it's a small pure-Rust link-time
# dep. Its per-pixel coverage callback (`OutlinedGlyph::draw`) suits our
# callback-based `aa_text::draw_text_at` better than fontdue's raw-bitmap API.
# pixtuoid-scene (the wasm-compiled engine) never sees this dep — binary-only, so
# the wasm hero renders text as a crisp DOM overlay, not baked pixels.
ab_glyph = "0.2"
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "fs", "io-util"] }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
unicode-width      = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
toml_edit          = { workspace = true }
# YAML parse+emit for the Hermes install target (config.yaml hooks merge). saphyr
# is the maintained yaml-rust successor (serde_yaml/serde_yml are both abandoned);
# it data-preserves a user's other config keys on merge but does NOT round-trip
# comments (a YAML-ecosystem limitation — see install/hermes.rs). Binary-only.
saphyr             = "0.0.11"
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
which              = "8"
# clock feature gives us Local::now() w/ system timezone for the wall clock.
chrono             = { version = "0.4", default-features = false, features = ["clock"] }
open               = "5"
# The `pixtuoid floating` desktop window (binary-only — pixtuoid-core stays window-free,
# invariant #1). winit = the frameless always-on-top window + main-thread event loop;
# softbuffer = CPU blit of the office RgbBuffer into it (no GPU). Both rust-windowing,
# share raw-window-handle 0.6, MSRV ≤ 1.89.
winit              = "0.30"
softbuffer         = "0.4"
clap_complete = "4.6.5"
clap_mangen = "0.3.0"

# termios/poll for the truecolor preflight's DECRQSS terminal query (term.rs):
# raw-mode the controlling tty + timed read of the reply. Unix-only — Windows
# hard-gates VT separately. Same 0.2 as pixtuoid-core/hook — no second build.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Focus-jump activation (focus/macos.rs): NSRunningApplication activate — plain
# Cocoa, zero TCC. Pinned to the SAME objc2 stack winit already pulls (0.2.x on
# objc2 0.5.2 per Cargo.lock) so the bindings don't double-compile — the same
# discipline pixtuoid-hook's windows-sys comment enshrines.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication", "libc"] }

# Focus-jump on Linux (focus/linux.rs): the EWMH _NET_ACTIVE_WINDOW protocol
# needs an X11 client; x11rb is already in-tree transitively via winit.
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

# GetShortPathNameW for the Codex/Reasonix Windows hook path: resolve a
# space/metacharacter-bearing install path to its DOS 8.3 short form so cmd.exe /C
# can invoke it (#195). Same 0.61 major as pixtuoid-core — no second build.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Storage_FileSystem",
    # focus/windows.rs: Toolhelp32 ancestor walk + EnumWindows/SetForegroundWindow
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
# End-to-end CLI golden for `sources --json` (the Raycast contract): runs the real
# binary in an isolated empty HOME and pins its stdout JSON order-insensitively.
# Goldens update with SNAPSHOTS=overwrite. See tests/cli_json.rs.
snapbox  = { version = "1", features = ["json"] }
# Emits the SourceStatus JSON Schema (the Raycast --json contract) — test/gen
# only, so the `JsonSchema` derive is `cfg_attr(test)` and this stays a dev-dep
# (no production-binary impact). See sources.rs + `just gen-contract`.
schemars = "1"
# test-util: paused-clock signal-arm tests in runtime/driver.rs (headless_loop).
tokio    = { workspace = true, features = ["test-util"] }
image    = { version = "0.25", default-features = false, features = ["png", "gif"] }
insta    = "1"

[[example]]
name = "snapshot"
path = "examples/snapshot/main.rs"
test = true

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/pixtuoid", "usr/bin/", "755"],
]
extended-description = "Terminal-native, multi-agent pixel-art visualizer for AI coding agents. Each running Claude Code session appears as an animated sprite in a top-down ASCII office."
